--- a/docs/hugo.yaml
+++ b/docs/hugo.yaml
@@ -1,5 +1,12 @@
 # Hugo configuration file
-title: arachne.ws
+baseURL: "https://arachne.ws/"
+title: "arachne.ws"
+
+enableRobotsTXT: true
+# Parse Git commit
+enableGitInfo: true
+# enableEmoji: false
+hasCJKLanguage: true
 
 # import hextra as module
 module:
@@ -7,14 +14,17 @@ module:
   - path: github.com/imfing/hextra
 
 markup:
-  # allow raw html
+  highlight:
+    noClasses: false
   goldmark:
     renderer:
       unsafe: true
-
-  # enable hextra syntax highlight
-  highlight:
-    noClasses: false
+    extensions:
+      passthrough:
+        delimiters:
+          block: [['\[', '\]'], ['$$', '$$']]
+          inline: [['\(', '\)']]
+        enable: true
 
 menu:
   main:
@@ -33,13 +43,63 @@ menu:
         type: search
 
 params:
+
+  description: Bidirectional, low-latency and secure communication for every platform.
+
   navbar:
     displayTitle: true
-    displayLogo: false
+    displayLogo: true
+    logo:
+      path: images/logo.svg
+      dark: images/logo-dark.svg
+      # width: 40
+      # height: 20
+      # link: /
+    width: wide
+
+  page:
+    # full (100%), wide (90rem), normal (1280px)
+    width: normal
+
+  theme:
+    # light | dark | system
+    default: system
+    displayToggle: true
+
+  search:
+    enable: true
+    type: flexsearch
+
+    flexsearch:
+      # index page by: content | summary | heading | title
+      index: content
+      # full | forward | reverse | strict
+      # https://github.com/nextapps-de/flexsearch/#tokenizer-prefix-search
+      tokenize: forward
 
   footer:
     displayCopyright: false
     displayPoweredBy: true
+
+  # Display the last modification date
+  displayUpdatedDate: true
+  dateFormat: "January 2, 2006"
+
+  highlight:
+    copy:
+      enable: true
+      # hover | always
+      display: hover
+
+  blog:
+    list:
+      displayTags: true
+      # date | lastmod | publishDate | title | weight
+      sortBy: date
+      sortOrder: desc # or "asc"
+    
+    article:
+      displayPagination: true
 
   editURL:
     enable: true
