--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "arachne.ws",
   "version": "0.1.0",
   "scripts": {
-    "dev": "concurrently \"cargo run --package dev\" \"simple-server dev 80\" -n ws,dev"
+    "dev": "concurrently \"cargo run --package dev\" \"serve dev -l 80\" -n ws,dev"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
-    "simple-server": "^1.1.1"
+    "serve": "14.2.4"
   }
 }
