--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "arachne.ws",
   "version": "0.1.0",
   "scripts": {
-    "dev": "concurrently \"cargo run --package dev\" \"serve dev -l 80\" -n ws,dev"
+    "serve": "serve dev -l 80",
+    "ws": "cargo watch -i dev/index.html -x run --package dev",
+    "dev": "concurrently \"cargo watch -x run --package dev\" \"serve dev -l 80\" -n ws,dev"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
