Update README.md for clarity and conciseness; adjust package.json and package-lock.json for dependency management

--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "scripts": {
     "dev": "concurrently \"tsx --watch dev/\" \"serve dev -l 80 -n -L\" -n ws,dev"
   },
-  "dependencies": {
-    "tsx": "^4.19.3"
-  },
   "devDependencies": {
     "@types/node": "^22.13.9",
     "concurrently": "^9.1.2",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "tsx": "^4.19.3"
   }
 }
