--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "arachne.ws",
   "version": "0.1.0",
   "scripts": {
-    "dev": "concurrently \"tsx --watch dev/\" \"serve dev -l 80 -n -L\" -n ws,dev"
+    "dev": "concurrently \"tsx --watch dev/\" \"serve dev -l 80 -n -L\" -n ws,dev",
+    "build:wasm": "cd server/rust/handle_websocket_frame && wasm-pack build --target nodejs --out-dir ../../wasm/handle_websocket_frame"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
     "concurrently": "^9.1.2",
     "serve": "^14.2.4",
     "tsx": "^4.19.3"
+  },
+  "dependencies": {
+    "handle_websocket_frame": "file:server/wasm/handle_websocket_frame"
   }
 }
