--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "concurrently \"tsx --watch dev/\" \"serve dev -l 80 -n -L\" -n ws,dev",
-    "build:wasm": "cd server/rust/handle_websocket_frame && wasm-pack build --target nodejs --out-dir ../../wasm/handle_websocket_frame"
+
+    "build:wasm": "npm run build:wasm:handle_websocket_frame",
+    "build:wasm:handle_websocket_frame": "cd server/rust/handle_websocket_frame && wasm-pack build --target nodejs --out-dir ../../wasm/handle_websocket_frame --release"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
