--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "arachne.ws",
   "version": "0.1.0",
   "scripts": {
-    "dev": "concurrently \"tsx --watch dev/\" \"serve dev -l 80 -n -L\" -n ws,dev",
-    "build:wasm": "npm run build:wasm:handle_websocket_frame",
-    "build:wasm:handle_websocket_frame": "cd server/rust/handle_websocket_frame && wasm-pack build --target nodejs --out-dir ../../wasm/handle_websocket_frame --release && rimraf ../../wasm/handle_websocket_frame/.gitignore"
+    "dev": "concurrently \"tsx --watch dev/\" \"serve dev -l 80 -n -L\" \"cd client/ && tsc\" -n ws,dev,build"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
@@ -12,8 +10,5 @@
     "rimraf": "^6.0.1",
     "serve": "^14.2.4",
     "tsx": "^4.19.3"
-  },
-  "dependencies": {
-    "handle_websocket_frame": "file:server/wasm/handle_websocket_frame"
   }
 }
